--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "description": "Slides for my Build Components Not Walls talk",
   "scripts": {
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d public",
-    "start": "cross-env NODE_ENV=development concurrently \"postcss public/css/_theme.css -o public/css/theme.css --watch\"  \"live-server public\"",
+    "start": "cross-env NODE_ENV=development concurrently \"postcss public/css/_theme.css -o public/css/theme.css --watch\"  \"live-server --port=3001 public\"",
     "build": "cross-env NODE_ENV=production postcss public/css/_theme.css -o public/css/theme.css"
   },
   "author": "Jag Reehal",
   "license": "MIT",
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "live-server": "^1.2.1",
+    "autoprefixer": "^9.6.1",
     "concurrently": "^4.1.2",
-    "cross-env": "^5.2.1",
+    "cross-env": "^6.0.0",
     "cssnano": "^4.1.10",
+    "gh-pages": "^2.1.1",
+    "live-server": "^1.2.1",
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
-    "gh-pages": "^2.1.1",
-    "autoprefixer": "^9.6.1",
     "tailwindcss": "^1.1.2"
   }
 }
